<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/show_empresa_razao_social_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/razao_social"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_razao_social"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toTopOf="@+id/show_empresa_guide_top" />
    <TextView
        android:id="@+id/show_empresa_razao_social"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        tools:text="BANCO ZÉ BONITINHO SA"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_nome_fantasia_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_razao_social_title" />
    <TextView
        android:id="@+id/show_empresa_nome_fantasia_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/nome_fantasia"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_nome_fantasia"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_razao_social" />
    <TextView
        android:id="@+id/show_empresa_nome_fantasia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_data_abertura_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_nome_fantasia_title"
        tools:text="Zé Bonitinho" />
    <TextView
        android:id="@+id/show_empresa_data_abertura_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/data_de_abertura"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_data_abertura"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_nome_fantasia" />
    <TextView
        android:id="@+id/show_empresa_data_abertura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_situacao_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_data_abertura_title"
        tools:text="03/04/2021" />
    <TextView
        android:id="@+id/show_empresa_cnpj_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cnpj"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_cnpj"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toTopOf="@+id/show_empresa_guide_top" />
    <TextView
        android:id="@+id/show_empresa_cnpj"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_tipo_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_cnpj_title"
        tools:text="00.781.165/0001-15" />
    <TextView
        android:id="@+id/show_empresa_natu_jur_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/natureza_juridica"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_natu_jur"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_tipo" />
    <TextView
        android:id="@+id/show_empresa_natu_jur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_endereco_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_natu_jur_title"
        tools:text="CAPITAL IMPRODUTIVO" />
    <TextView
        android:id="@+id/show_empresa_tipo_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_tipo"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_cnpj" />
    <TextView
        android:id="@+id/show_empresa_tipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/show_empresa_natu_jur_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_tipo_title"
        tools:text="MATRIZ" />
    <TextView
        android:id="@+id/show_empresa_situacao_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/situacao"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_situacao"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_data_abertura" />
    <TextView
        android:id="@+id/show_empresa_situacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_cep_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_situacao_title"
        tools:text="ATIVO" />
    <TextView
        android:id="@+id/show_empresa_endereco_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/endereco"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_endereco"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_natu_jur" />
    <TextView
        android:id="@+id/show_empresa_endereco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_bairro_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_endereco_title"
        tools:text="RUA DOS TAMOIOS" />
    <TextView
        android:id="@+id/show_empresa_cep_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cep"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_cep"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_situacao" />
    <TextView
        android:id="@+id/show_empresa_cep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_municipio_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_cep_title"
        tools:text="07198-100" />
    <TextView
        android:id="@+id/show_empresa_bairro_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bairro"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_bairro"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_endereco" />
    <TextView
        android:id="@+id/show_empresa_bairro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_uf_title"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_bairro_title"
        tools:text="JD. DADO" />
    <TextView
        android:id="@+id/show_empresa_municipio_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/municipio"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_municipio"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_cep" />
    <TextView
        android:id="@+id/show_empresa_municipio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_guide_bottom"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_start"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_municipio_title"
        tools:text="São Paulo" />
    <TextView
        android:id="@+id/show_empresa_uf_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_uf"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_bairro" />
    <TextView
        android:id="@+id/show_empresa_uf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/show_empresa_guide_bottom"
        app:layout_constraintEnd_toStartOf="@+id/show_empresa_guide_end"
        app:layout_constraintStart_toStartOf="@+id/show_empresa_guide_v_central"
        app:layout_constraintTop_toBottomOf="@+id/show_empresa_uf_title"
        tools:text="SP" />

    <View
        android:id="@+id/show_empresa_separator"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/PrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/show_empresa_guide_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/show_empresa_guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/show_empresa_guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/show_empresa_guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/show_empresa_guide_v_central"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>